
We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

* Add abilitiy to define Example subclass instead of using describe
* Applied Patch from James Edward Gray II to improve syntax highlighting in TextMate
* Fixed [#13579] NoMethodError not raised for missing helper methods
* Fixed [#13713] form helper method 'select' can not be called when calling custom helper methods from specs
* Behaviour subclasses Test::Unit::TestCase
* Added stub_everything method to create a stub that will return itself for any message it doesn't understand
* Added stories directory with stories/all.rb and stories/helper.rb when you script/generate rspec
* Applied [#13554] Add "And" so you can say Given... And... When... Then... And...
* Applied [#11254] RSpec syntax coloring and function pop-up integration in TextMate (Patch from Wincent Colaiuta)
* Applied [#13143] ActionView::Helpers::RecordIdentificationHelper should be included if present (Patch from Jay Levitt)
* Applied [#13567] patch to allow stubs to yield consecutive values (Patch from Rupert Voelcker)
* Applied [#13559] reverse version of route_for (Patch from Rupert Voelcker)
* Added [#13532] /lib specs should get base EvalContext
* Applied [#13451] Add a null_object option to mock_model (Patch from James Deville)
* Applied [#11919] Making non-implemented specs easy in textmate (Patch from Scott Taylor)
* Applied [#13274] ThrowSymbol recognized a NameError triggered by Kernel#method_missing as a thrown Symbol
* Applied [#12722] the alternate file command does not work in rails views due to scope (Patch from Carl Porth)
* Moved instance method of Behaviour to Class methods
* Instances of Behaviour are now executed as the spec