@@ -7,7 +7,7 @@ require 'spec/rails'
 Spec::Runner.configure do |config|
   config.use_transactional_fixtures = true
   config.use_instantiated_fixtures  = false
-  config.fixture_path = RAILS_ROOT + '/spec/fixtures'
+  config.fixture_path = RAILS_ROOT + '/spec/fixtures/'
 
   # You can declare fixtures for each behaviour like this:
   #   describe "...." do
